# parsing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
TwurtleParser/: CMakeLists.txt
TwurtleParser/include/randomcat/parser/: parse_result.hpp
TwurtleParser/include/randomcat/parser/chars/: char_parse_result.hpp  char_source.hpp  tokenizer.hpp
TwurtleParser/include/randomcat/parser/chars/detail/: char_traits.hpp
TwurtleParser/include/randomcat/parser/detail/: defaults.hpp  impl_only.hpp  util.hpp
TwurtleParser/include/randomcat/parser/grammar/: grammar_terms.hpp
TwurtleParser/include/randomcat/parser/tokens/detail/: token_traits.hpp
TwurtleParser/include/randomcat/parser/tokens/token_stream/: token_stream.hpp
example/: CMakeLists.txt
example/ComplexParser/: CMakeLists.txt  complex_parser.txt  input.txt
example/ComplexParser/include/randomcat/complex_parsing/: lift.hpp  token.hpp  token_descriptors.hpp  token_manipulation.hpp
example/ComplexParser/src/: main.cpp  token.cpp
example/SimpleParser/: CMakeLists.txt  input.txt
example/SimpleParser/include/randomcat/simple_parsing/: token.hpp  token_descriptors.hpp
example/SimpleParser/src/: main.cpp  token.cpp
lib/: CMakeLists.txt
tools/: .clang-format  format  format_entire_history  format_file
